[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/theme/greyTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/GameUI/equipmentMenu/playerEquipmentMenu.gd" type="Script" id=3]

[node name="playerEquipmentMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
inventoryControl = "res://UI/GameUI/equipmentMenu/equipmentItemBox.tscn"

[node name="backing" type="Panel" parent="."]
margin_left = 410.0
margin_top = 190.0
margin_right = 1510.0
margin_bottom = 890.0
rect_min_size = Vector2( 1100, 700 )
theme = ExtResource( 1 )

[node name="vAlign" type="VBoxContainer" parent="backing"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="ColorRect" parent="backing/vAlign"]
margin_right = 1100.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
color = Color( 0.25098, 0.25098, 0.25098, 1 )

[node name="Label" type="Label" parent="backing/vAlign/top"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.5
margin_right = 160.0
margin_bottom = 12.5
theme = ExtResource( 1 )
text = "Equipment Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hAlign" type="HBoxContainer" parent="backing/vAlign"]
margin_top = 68.0
margin_right = 1100.0
margin_bottom = 700.0
size_flags_vertical = 3

[node name="sAlign" type="ScrollContainer" parent="backing/vAlign/hAlign"]
margin_right = 320.0
margin_bottom = 632.0
rect_min_size = Vector2( 320, 0 )

[node name="itemList" type="VBoxContainer" parent="backing/vAlign/hAlign/sAlign"]

[node name="currentStats" type="VBoxContainer" parent="backing/vAlign/hAlign"]
margin_left = 324.0
margin_right = 710.0
margin_bottom = 632.0
size_flags_horizontal = 3

[node name="sectionTitle" type="RichTextLabel" parent="backing/vAlign/hAlign/currentStats"]
margin_right = 386.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
theme = ExtResource( 1 )
text = "Player Current Stats"

[node name="defenseStat" type="RichTextLabel" parent="backing/vAlign/hAlign/currentStats"]
margin_top = 36.0
margin_right = 386.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 32 )
theme = ExtResource( 1 )
text = "Defense: 000"

[node name="currentEquipment" type="RichTextLabel" parent="backing/vAlign/hAlign"]
margin_left = 714.0
margin_right = 1100.0
margin_bottom = 632.0
size_flags_horizontal = 3
text = "Equipment Slots
head
torso
hands
legs
feet"
